--- a/public/style.css
+++ b/public/style.css
@@ -124,7 +124,7 @@ box-shadow: 2px 2px 6px #333;
   margin-top: 1em;
 }
 #rating_stamp img {
-  background: black;
+  /*background: black;*/
   padding: 0 0.2em;
   text-align: center;
   display: block;
