--- a/views/movie.erb
+++ b/views/movie.erb
@@ -5,7 +5,6 @@
   <section id='text_side'>
     <section>
       <h1 id='title'><%= @result['Title'] %> (<%= @result['Year'] %>)</h1>
-      <div id='rated'>Rated: <%= @result['Rated'] %></div>
       <div id='released'>Released: <%= @result['Released'] %></div>
       <div id='runtime'>Run Time: <%= @result['Runtime'] %></div>
       <div id='Genre'><%= @result['Genre'] %></div>
@@ -30,7 +29,7 @@
       <!-- <div id='imdb_votes'><%= @result['imdbVotes'] %></div> -->
     </section>
     <div id='rating_stamp'>
-      <img height="70px"src='<%= get_rating_img(@result['Rated']) %>'/>
+      <img height="70px"src='<%= get_rating_img2(@result['Rated']) %>'/>
     </div>
   </section>
 </div>
